--- a/custom_scss/style.scss
+++ b/custom_scss/style.scss
@@ -12,6 +12,7 @@ html {
 body{
   height: 100%;
   background-image: url("./../../img/TraegerVerein.jpg");
+  background-image: url("./../../img/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
