--- a/custom_scss/colors.scss
+++ b/custom_scss/colors.scss
@@ -1,12 +1,12 @@
 $white: #ffffff;
 
 $theme-colors: (
-    "primary":    #4B6564,
+    "primary":    #4B6546,
     "secondary":  #89A56E,
     "success":    #A7D49B,
-    "danger":     #FF7F11,
-    "warning":    #F7E3A4,
-    "info":       #90C2E7,
+    "danger":     #FCA17D,
+    "warning":    #A7D49B,
+    "info":       #63ADF2,
     "light":      #f4f8f8,
     "dark":       #0D3B66,
     "white":      $white,
