--- a/custom_scss/style.scss
+++ b/custom_scss/style.scss
@@ -11,6 +11,7 @@ html {
 
 body{
   height: 100%;
+  background-color: #305039;
   background-image: url("./../../img/TraegerVerein.jpg");
   background-repeat: no-repeat;
   background-size: cover;
