added more info for Mobiles

--- a/custom_scss/style.scss
+++ b/custom_scss/style.scss
@@ -35,6 +35,9 @@ nav {
 //  opacity: 1;
 //}
 
+.karuselrow {
+  margin-bottom: 5vh;
+}
 section{ 
   position:relative; 
   margin: 2vh 2vw 2vh 2vw;
